Avances del entregable

--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- CSS Link -->
   <link rel="stylesheet" href="style.css">
+  <!-- Font - Noto Sans (CDN) -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-  <title>Inventario Interactivo</title>
+  <title>Inventario Interactivo | Felipe Marin</title>
 </head>
 <body>
 
@@ -22,9 +24,9 @@
       <button id="showProducts" onclick="showProducts()">Mostrar Productos</button>
     </div>
 
-    <input type="checkbox" class="check">
   </main>
   
+  <!-- JS File -->
   <script src="./gestion_datos.js"></script>
 </body>
 </html>
