--- a/index.html
+++ b/index.html
@@ -15,13 +15,14 @@
 
   <main class="main__content">
     <h1 class="main__title">
-      Dashboard - Inventario Interactivo
+      Dashboard - Inventory Management System
     </h1>
 
+    <!-- Dashboard Buttons -->
     <div class="container__buttons">
-      <button id="addProduct" onclick="addProduct()">Agregar Producto</button>
-      <button id="deleteProduct" onclick="deleteProduct()">Eliminar Producto</button>
-      <button id="showProducts" onclick="showProducts()">Mostrar Productos</button>
+      <button id="addProduct" onclick="addProduct()">Add Product</button>
+      <button id="deleteProduct" onclick="deleteProduct()">Delete Product</button>
+      <button id="showProducts" onclick="showProducts()">Show Product</button>
     </div>
 
   </main>
