--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 <body>
 
+  <!-- Main Content -->
   <main class="main__content">
     <h1 class="main__title">
       Dashboard - Inventory Management System
